# async-sendgrid

./: .gitignore  LICENSE  README.md  pylintrc  pyproject.toml  requirements.txt  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/action/: release.yaml
.github/actions/build_async_sendgrid/: action.yaml
.github/workflows/: formatter.yaml  integration.yaml  linting.yaml  python-publish.yml  release.yml  typing.yaml  unit.yaml
async_sendgrid/: __init__.py  sendgrid.py  utils.py
example/: example.ipynb
tests/unit/: test_client.py  test_units.py
