[tool.poetry]
name = "async-sendgrid"
version = "0.0.4"
description = "SendGrid simple async client based on httpx."
license = "MIT"
authors = ["Saltymakov Timofey <saltytimofey@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sensodevices/async-sendgrid"
keywords = ["sendgrid", "utilities", "async"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities"
]

packages = [
    { include = "async_sendgrid" },
]

[tool.poetry.dependencies]
python = "^3.9"
sendgrid = "^6.7.0"
httpx = "^0.24.1"


[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.15.1"
pytest-cov = "^4.0.0"
pytest-httpx="^0.24.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"
black = "^23.9.0"
tox = "^4.11.1"


[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

